[build-system]
requires = ["setuptools>=43.0.0", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nisqalib"
version = "1.1.0"
dependencies = [
    "librosa==0.8.1",
    "matplotlib==3.5.1",
    "numba==0.54.1",
    "numpy==1.20.3",
    "pandas==1.3.5",
    "pyyaml==6.0",
    "scikit-learn==1.0.2",
    "seaborn==0.11.2",
    "tqdm==4.62.3",
]
requires-python = ">=3.8"
authors = [
  {name = "kale4eat", email = "kale4eat@gmail.com"},
]
description = "Non-Intrusive Speech Quality and TTS Naturalness Assessment"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python"
]

[project.urls]
Repository = "https://github.com/kale4eat/nisqalib.git"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
